dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statistics-server-service
spec:
  selector:
    app: statistics-server
  ports:
    - protocol: TCP
      port: 30001
      targetPort: 30001
      nodePort: 30001
  type: NodePort
